1st submission of feat_PersonalInfo.

--- a/InstaRichie/Views/PersonalInfoPage.xaml
+++ b/InstaRichie/Views/PersonalInfoPage.xaml
@@ -1,42 +1,29 @@
-﻿<!--
-    Start Finance - An to manage your personal finances.
-    Copyright (C) 2016  Jijo Bose
-    Start Finance is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-    Start Finance is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-    You should have received a copy of the GNU General Public License
-    along with Start Finance.  If not, see <http://www.gnu.org/licenses/>.tr
-
--->
-
- <Page
-    x:Class="StartFinance.Views.AccountsPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:Behaviors="using:Template10.Behaviors"
-    xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
-    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:controls="using:Template10.Controls"
-    xmlns:local="using:StartFinance.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:vm="using:StartFinance.ViewModels"
-    Loaded="Page_Loaded"
-    mc:Ignorable="d">
+﻿<Page
+   x:Class="StartFinance.Views.PersonalInfoPage"
+   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+   xmlns:Behaviors="using:Template10.Behaviors"
+   xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
+   xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
+   xmlns:controls="using:Template10.Controls"
+   xmlns:local="using:StartFinance.Views"
+   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+   xmlns:vm="using:StartFinance.ViewModels"
+   Loaded="Page_Loaded"
+   mc:Ignorable="d">
 
     <Page.Resources>
         <DataTemplate x:Key="TransListView">
             <Grid>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{Binding ID}" Padding="0,0,15,0"/>
-                    <TextBlock Text="{Binding AccountName}" Padding="0,0,15,0"/>
-                    <TextBlock Text="{Binding InitialAmount}" Padding="0,0,15,0"/>
-                    <TextBlock Text="{Binding OverDraft}"/>
+                    <TextBlock Text="{Binding PersonalID}" Padding="0,0,15,0"/>
+                    <TextBlock Text="{Binding FirstName}" Padding="0,0,15,0"/>
+                    <TextBlock Text="{Binding LastName}" Padding="0,0,15,0"/>
+                    <TextBlock Text="{Binding DOB}" Padding="0,0,15,0"/>
+                    <TextBlock Text="{Binding Gender}" Padding="0,0,15,0"/>
+                    <TextBlock Text="{Binding Email}" Padding="0,0,15,0"/>
+                    <TextBlock Text="{Binding MobilePhone}"/>
                 </StackPanel>
             </Grid>
         </DataTemplate>
@@ -78,8 +65,8 @@
         </VisualStateManager.VisualStateGroups>
 
         <controls:PageHeader x:Name="pageHeader" RelativePanel.AlignLeftWithPanel="True"
-			RelativePanel.AlignRightWithPanel="True"
-			RelativePanel.AlignTopWithPanel="True" Text="Add/Remove Accounts">
+  RelativePanel.AlignRightWithPanel="True"
+  RelativePanel.AlignTopWithPanel="True" Text="Add/Remove Accounts">
 
             <!--  secondary commands  -->
             <controls:PageHeader.SecondaryCommands>
@@ -90,13 +77,13 @@
         </controls:PageHeader>
 
         <controls:PageHeader x:Name="pageFooter" RelativePanel.AlignLeftWithPanel="True"
-			RelativePanel.AlignRightWithPanel="True"
-			RelativePanel.AlignBottomWithPanel="True">
+  RelativePanel.AlignRightWithPanel="True"
+  RelativePanel.AlignBottomWithPanel="True">
 
             <!--  secondary commands  -->
             <controls:PageHeader.PrimaryCommands>
-                <AppBarButton Icon="Add" Label="Add Account" Click="AppBarButton_Click" />
-                <AppBarButton Icon="Delete" Label="Delete Account" Click="DeleteItem_Click" />
+                <AppBarButton Icon="Add" Label="Add Personal Info" Click="AppBarButton_Click" />
+                <AppBarButton Icon="Delete" Label="Delete Personal Info" Click="DeleteItem_Click" />
             </controls:PageHeader.PrimaryCommands>
         </controls:PageHeader>
 
@@ -104,25 +91,25 @@
         <Pivot>
             <RelativePanel.Below>pageHeader</RelativePanel.Below>
             <RelativePanel.Above>pageFooter</RelativePanel.Above>
-            <PivotItem Header="Accounts">
+            <PivotItem Header="PersonalInfo">
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="185"/>
+                        <RowDefinition Height="370"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <StackPanel x:Name="PageStart" Grid.Row="0" VerticalAlignment="Top"
-                        HorizontalAlignment="Stretch"
-                        Orientation="Vertical" Margin="10,5,10,0">
-                        <TextBox x:Name="AccName" Header="Account Name" PlaceholderText="Cash Wallet, Savings or Credit Card" TextWrapping="Wrap"/>
-                        <TextBox x:Name="MoneyIn" Header="Initial Amount" PlaceholderText="100.00" InputScope="Number" TextWrapping="Wrap"/>
-                        <ToggleSwitch x:Name="overdraft" Header="Enable Overdraft"
-                                      HorizontalAlignment="Stretch" ToolTipService.Placement="Mouse"
-                                      ToolTipService.ToolTip="Mostly used for Credit Cards"
-                                      VerticalAlignment="Stretch"/>
+              HorizontalAlignment="Stretch"
+              Orientation="Vertical" Margin="10,5,10,0">
+                        <TextBox x:Name="txtFirstName" Header="First Name" PlaceholderText="John" TextWrapping="Wrap"/>
+                        <TextBox x:Name="txtLastName" Header="Last Name" PlaceholderText="Lee" TextWrapping="Wrap"/>
+                        <TextBox x:Name="txtDOB" Header="DOB" PlaceholderText="DD-MM-YYYY" TextWrapping="Wrap"/>
+                        <TextBox x:Name="txtGender" Header="Gender" PlaceholderText="M/F" TextWrapping="Wrap"/>
+                        <TextBox x:Name="txtEmail" Header="Email" PlaceholderText="abc@abc.com" TextWrapping="Wrap"/>
+                        <TextBox x:Name="txtMobilePhone" Header="Mobile Phone" PlaceholderText="xxxx-xxx-xxx" TextWrapping="Wrap"/>
 
                     </StackPanel>
                     <ListView x:Name="TransactionList" Grid.Row="1" ItemTemplate="{StaticResource TransListView}"
-                              HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                         <RelativePanel.Below>PageStart</RelativePanel.Below>
                     </ListView>
                 </Grid>
